--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
   </head> 
   <body>
     <div class="intro">
-      <button class="button button1"></button>
+      <button class="button button1" onclick="window.location.href='levels/level1.html'"></button>
     </div>
  </body> 
 </html>
