added imgs to dialog

--- a/levels/level1.html
+++ b/levels/level1.html
@@ -10,14 +10,13 @@
 </head>
 <body>
     <div class="intro">
-        <div class="dialog">
-            
+        <div class="dialog" id="main_dialog">
             <div class="dialog_images">
                 <div class="left dialog_img" id="left_img">
-                    <img src="" alt="" class="left">
+                    <img src="../images/j.png" alt="" class="left">
                 </div>
                 <div class="right dialog_img" id="right_img">
-                    <img src="" alt="" class="right">
+                    <img src="../images/jot.png" alt="" class="right">
                 </div>
             </div>
             <div class="info" >
