--- a/levels/level1.html
+++ b/levels/level1.html
@@ -12,21 +12,19 @@
     <div class="intro">
         <div class="dialog" id="main_dialog">
             <div class="dialog_images">
-                <div class="left dialog_img" id="left_img">
-                    <img src="../images/j.png" alt="" class="left">
+                <div class="left dialog_img">
+                    <img alt="" class="left" id="left_img">
                 </div>
-                <div class="right dialog_img" id="right_img">
-                    <img src="../images/jot.png" alt="" class="right">
+                <div class="right dialog_img" >
+                    <img alt="" class="right" id="right_img">
                 </div>
             </div>
             <div class="info" >
                 <div class="dialog_name" id="dialog_current_name">
-                    jsoke
                 </div>
                 <div class="text" id="dialog_text">
-                    Lorem ipsusadasdasdalskdkajfdsajfjsdifdijughdhm dolor sit amet consectetur, adipisicing elit. Tenetur quisquam veritatis quam corrupti ipsum necessitatibus quibusdam voluptatibus obcaecati explicabo sunt distinctio, nisi totam at sit rem accusamus asperiores porro cupiditate?
                 </div>
-                <button class="button next" id="dialog_next_btn">next</button>
+                <button class="button next" id="dialog_next_btn"></button>
             </div>
             
             
